fix: wrap project logos

--- a/src/assets/css/Portfolio.module.scss
+++ b/src/assets/css/Portfolio.module.scss
@@ -4,7 +4,7 @@
   align-items: center;
   .projectLogo {
     width: 150px;
-    margin: 2rem 0;
+    margin: 2rem;
   }
 }
 .wrap {
@@ -17,9 +17,10 @@
   width: 100%;
   max-width: 1200px;
 }
-@media (min-width: 769px) {
+@media (min-width: 430px) {
   .projects {
     flex-direction: row;
+    flex-wrap: wrap;
     align-items: flex-end;
     justify-content: space-around;
     margin-bottom: 3rem;
